Fixed Thumbnails a tad bit more